# WebPhotoRedactor

backend/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  schema.yml  start.sh
backend/apps/: urls.py
backend/apps/main/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/main/migrations/: 0001_initial.py
backend/apps/payments/: admin.py  apps.py  models.py  orders_system.py  serializers.py  services.py  signals.py  urls.py  utils.py  views.py
backend/apps/payments/migrations/: 0001_initial.py  0002_subscription_period_in_months_and_more.py  0003_alter_usersubscription_options_and_more.py  0004_paypalproduct_subscription_stripe_price_id.py  0005_alter_paypalproduct_options_and_more.py  0006_usersubscription_paypal_subscription_id.py  0007_plan_remove_usersubscription_subscription_and_more.py  (+29 more)
backend/apps/picsart/: admin.py  models.py  serializers.py  service.py  urls.py  utils.py  views.py
backend/apps/subscriptions/: admin.py  apps.py  models.py  orders_system.py  serializers.py  services.py  signals.py  urls.py  utils.py  views.py
backend/apps/users/: admin.py  manager.py  models.py  permissions.py  serializers.py  service.py  services.py  signals.py  token.py  urls.py  views.py
backend/core/: settings.py  urls.py
backend/nginx/: Dockerfile  nginx.conf
backend/templates/payments/: index.html
backend/templates/static/: main.js
backend/templates/subscriptions/: create_user_for_sub_mail.html  index.html
backend/templates/users/: confirm_email_changing.html  confirm_email_message.html  password_reset_msg.html
(+89 files in other folders)
